--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
-
+<!--Mohan-->
 	<description>Maven Web Project for Java Project</description>
 
 	<organization>
