--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,10 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://18.138.81.149:9000/</sonar.host.url>
-		<sonar.login>admin</sonar.login>
-		<sonar.password>passw0rd</sonar.password> 
+		<sonar.host.url>http://100.26.143.144:9000/</sonar.host.url>
+		<sonar.login>34edc3e91900aa3f09c9418f3ebc255c78ad0e94</sonar.login>
+		<!-- <sonar.login>admin</sonar.login>
+		<sonar.password>passw0rd</sonar.password> --> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
